# socratic-bench

./: .gitignore  README.md  pyproject.toml  tox.ini
src/: agents.py  llms.py  pipeline.py  readers.py  schemas.py  stages.py  tmp.py
src/socratic_bench/: __init__.py  agents.py  bench.py  llms.py  pipeline.py  readers.py  schemas.py  stages.py
src/socratic_bench/llms/: hf.py  ollama.py  openai.py
tests/: test_agents.py  test_pipeline.py  test_stages.py
