[tool.poetry]
name = "socratic-bench"
version = "0.1.0"
description = "socratic-bench is a research framework and benchmark dedicated to building and evaluating LLMs that teach by asking, not just answering — with a commitment to developing the best AI tutors for real learning."
authors = ["Giovanni Gatti Pinheiro <giovanni.gatti.pinheiro@gmail.com>"]
packages = [{ include = "socratic_bench", from = "src" }]
keywords = ["nlp", "socratic", "llm", "benchmark"]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic"
]

[project.urls]
Homepage = "https://github.com/GiovanniGatti/socratic-bench"
Issues = "https://github.com/GiovanniGatti/socratic-bench/issues"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
datasets = "4.0.0"
pydantic = "^2.10.0"
transformers = { version = "^4.48.0", optional = true }
openai = { version = "^1.97.1", optional = true }
ollama = { version = "^0.4.8", optional = true }

[tool.poetry.extras]
hf = ["transformers"]
openai = ["openai"]
ollama = ["ollama"]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.8.2"
mypy = "^1.17.0"
mypy_extensions = "^1.1.0"


[tool.poetry.group.build.dependencies]
setuptools = "^75.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
