[project]
name = "socratic-bench"
version = "0.1.0"
description = "socratic-bench is a research framework and benchmark dedicated to building and evaluating LLMs that teach by asking, not just answering — with a commitment to developing the best AI tutors for real learning."
license = "MIT"
keywords = ["nlp", "socratic", "llm", "benchmark"]
authors = [{ name = "Giovanni Gatti Pinheiro", email = "giovanni.gatti.pinheiro@gmail.com" }]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Text Processing :: Linguistic"
]
requires-python = ">=3.11,<3.14"
dependnecies = ["datasets==4.0.0", "pydantic>=2.10.0"]

[project.optional-dependencies]
hf = ["transformers>=4.48.0", "torch>=2.7.1", "accelerate>=1.9.0"]
openai = ["openai>=1.97.1,<2.0"]
ollama = ["ollama>=0.4.8,<1.0"]

[project.urls]
Homepage = "https://github.com/GiovanniGatti/socratic-bench"
Issues = "https://github.com/GiovanniGatti/socratic-bench/issues"

[tool.poetry]
packages = [{ include = "socratic_bench", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.8.2"
mypy = "^1.17.0"
mypy_extensions = "^1.1.0"

[tool.poetry.group.build.dependencies]
setuptools = "^75.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
